[gd_scene load_steps=24 format=3 uid="uid://c5tdy0vlg8yx"]

[ext_resource type="Script" uid="uid://diindhuf2tctw" path="res://scripts/hud.gd" id="1_efote"]
[ext_resource type="PackedScene" uid="uid://cq8ghkv3svonm" path="res://scenes/HotBar.tscn" id="2_vow1y"]
[ext_resource type="Texture2D" uid="uid://bydyxd83wf4lv" path="res://world_sprites/textureAtlas.png" id="3_vow1y"]
[ext_resource type="PackedScene" uid="uid://df0dg1ely3hdm" path="res://scenes/HudCounter.tscn" id="4_xxqia"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ne771"]
texture = ExtResource("3_vow1y")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0

[sub_resource type="TileSet" id="TileSet_xxqia"]
terrain_set_0/mode = 2
sources/0 = SubResource("TileSetAtlasSource_ne771")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xxqia"]
texture = ExtResource("3_vow1y")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0

[sub_resource type="TileSet" id="TileSet_1and6"]
terrain_set_0/mode = 2
sources/0 = SubResource("TileSetAtlasSource_xxqia")

[sub_resource type="AtlasTexture" id="AtlasTexture_xxqia"]
atlas = ExtResource("3_vow1y")
region = Rect2(96, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ne771"]
load_path = "res://.godot/imported/textureAtlas.png-91c19def63bab157ac51f9858f82b9d2.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_gv1iq"]
atlas = SubResource("CompressedTexture2D_ne771")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ylh"]
atlas = ExtResource("3_vow1y")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbfpv"]
atlas = ExtResource("3_vow1y")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x0me"]
atlas = ExtResource("3_vow1y")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1and6"]
atlas = ExtResource("3_vow1y")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w75gc"]
atlas = ExtResource("3_vow1y")
region = Rect2(160, 0, 16, 16)

[sub_resource type="Animation" id="Animation_xxqia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.458824, 0, 0.501961, 0)]
}

[sub_resource type="Animation" id="Animation_7hsmw"]
resource_name = "night"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.458824, 0, 0.501961, 0.258824)]
}

[sub_resource type="Animation" id="Animation_gv1iq"]
resource_name = "turn_day"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.458824, 0, 0.501961, 0.258824), Color(0.458824, 0, 0.501961, 0)]
}

[sub_resource type="Animation" id="Animation_ne771"]
resource_name = "turn_night"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.458824, 0, 0.501961, 0), Color(0.458824, 0, 0.501961, 0.258824)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1and6"]
_data = {
&"RESET": SubResource("Animation_xxqia"),
&"night": SubResource("Animation_7hsmw"),
&"turn_day": SubResource("Animation_gv1iq"),
&"turn_night": SubResource("Animation_ne771")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ne771"]
atlas = ExtResource("3_vow1y")
region = Rect2(128, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2afx3"]
atlas = ExtResource("3_vow1y")
region = Rect2(128, 112, 16, 16)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_efote")

[node name="HotBar" parent="." instance=ExtResource("2_vow1y")]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 20.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 112.876
offset_top = -83.971
offset_right = 153.876
offset_bottom = -43.971
mouse_filter = 2

[node name="background7" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background7"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, 0, 851968, 8, 65536, 851968, 8, 131072, 851968, 8, 131073, 851968, 8, 65537, 851968, 8, 1, 851968, 8, -65535, 851968, 8, -1, 851968, 8, 65535, 851968, 8, 131071, 851968, 8, 196607, 851968, 8, 262143, 851968, 8, 196608, 851968, 8, 196609, 851968, 8, 327679, 851968, 8, 393215, 851968, 8, 327680, 851968, 8, 327681, 851968, 8, 262145, 851968, 8, 262144, 851968, 8)

[node name="Inside2" type="TileMap" parent="Control/background7"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65535, 720896, 6, 196607, 655360, 7, 131073, 720896, 6, 393215, 720896, 7, 327681, 720896, 7)

[node name="Inside3" type="TileMap" parent="Control/background7"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 7, -65535, 655360, 6, 393215, 786432, 7, 327681, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background7"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 720896, 6, 1, 720896, 6, -65535, 851968, 6, -65536, 655360, 6, 65535, 655360, 7, -1, 786432, 6, 131071, 655360, 7, 393215, 655360, 7, 327679, 655360, 7, 327681, 720896, 6, 262145, 720896, 6, 196609, 720896, 6, 262143, 655360, 7, 327680, 720896, 7)

[node name="background6" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background6"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, 0, 851968, 8, 65536, 851968, 8, 131072, 851968, 8, 131073, 851968, 8, 65537, 851968, 8, 1, 851968, 8, -65535, 851968, 8, -1, 851968, 8, 65535, 851968, 8, 131071, 851968, 8, 196607, 851968, 8, 262143, 851968, 8, 196608, 851968, 8, 196609, 851968, 8, 327679, 851968, 8, 262144, 851968, 8, 262145, 851968, 8)

[node name="Inside2" type="TileMap" parent="Control/background6"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65535, 720896, 6, 196607, 655360, 7, 131073, 720896, 6, 327679, 720896, 7, 262145, 720896, 7)

[node name="Inside3" type="TileMap" parent="Control/background6"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 7, -65535, 655360, 6, 327679, 786432, 7, 262145, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background6"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 720896, 6, 1, 720896, 6, -65535, 851968, 6, -65536, 655360, 6, 65535, 655360, 7, -1, 786432, 6, 131071, 655360, 7, 196609, 720896, 6, 262143, 655360, 7, 327679, 655360, 7, 262144, 720896, 7, 262145, 720896, 6)

[node name="background5" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background5"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, 0, 851968, 8, 65536, 851968, 8, 131072, 851968, 8, 131073, 851968, 8, 65537, 851968, 8, 1, 851968, 8, -65535, 851968, 8, -1, 851968, 8, 65535, 851968, 8, 131071, 851968, 8, 196607, 851968, 8, 262143, 851968, 8, 196608, 851968, 8, 196609, 851968, 8)

[node name="Inside2" type="TileMap" parent="Control/background5"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65535, 720896, 6, 196607, 655360, 7, 131073, 720896, 6, 262143, 720896, 7, 196609, 720896, 7)

[node name="Inside3" type="TileMap" parent="Control/background5"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 7, -65535, 655360, 6, 262143, 786432, 7, 196609, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background5"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 720896, 6, 1, 720896, 6, -65535, 851968, 6, -65536, 655360, 6, 65535, 655360, 7, -1, 786432, 6, 131071, 655360, 7, 262143, 655360, 7, 196608, 720896, 7, 196609, 720896, 6)

[node name="background4" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background4"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, 0, 851968, 8, 65536, 851968, 8, 131072, 851968, 8, 131073, 851968, 8, 65537, 851968, 8, 1, 851968, 8, -65535, 851968, 8, -1, 851968, 8, 65535, 851968, 8, 131071, 851968, 8, 196607, 851968, 8)

[node name="Inside2" type="TileMap" parent="Control/background4"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65535, 720896, 6, 196607, 720896, 7, 131073, 720896, 7)

[node name="Inside3" type="TileMap" parent="Control/background4"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 7, -65535, 655360, 6, 196607, 786432, 7, 131073, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background4"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 720896, 6, 1, 720896, 6, -65535, 851968, 6, -65536, 655360, 6, 65535, 655360, 7, -1, 786432, 6, 131071, 655360, 7, 196607, 655360, 7, 131072, 720896, 7, 131073, 720896, 6)

[node name="background3" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background3"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, 0, 851968, 8, 65536, 851968, 8, 65537, 851968, 8, 1, 851968, 8, -65535, 851968, 8, -1, 851968, 8, 65535, 851968, 8, 131071, 851968, 8)

[node name="Inside2" type="TileMap" parent="Control/background3"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65535, 720896, 6, 131071, 720896, 7, 65537, 720896, 7)

[node name="Inside3" type="TileMap" parent="Control/background3"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 7, -65535, 655360, 6, 131071, 786432, 7, 65537, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background3"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 720896, 6, 1, 720896, 6, -65535, 851968, 6, -65536, 655360, 6, 65535, 655360, 7, -1, 786432, 6, 131071, 655360, 7, 65536, 720896, 7)

[node name="background2" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background2"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, 0, 851968, 8, 1, 851968, 8, -65535, 851968, 8, -1, 851968, 8, 65535, 851968, 8)

[node name="Inside2" type="TileMap" parent="Control/background2"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65535, 720896, 6, 65535, 720896, 7, 1, 720896, 7)

[node name="Inside3" type="TileMap" parent="Control/background2"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 7, -65535, 655360, 6, 65535, 786432, 7, 1, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background2"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(1, 720896, 6, -65535, 851968, 6, -65536, 655360, 6, 65535, 655360, 7, -1, 786432, 6, 0, 720896, 7)

[node name="background1" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(1.215, 0.84)
scale = Vector2(0.92, 0.92)

[node name="Inside" type="TileMap" parent="Control/background1"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 8, -65535, 851968, 8, -1, 851968, 8)

[node name="Inside4" type="TileMap" parent="Control/background1"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 655360, 6, -65536, 655360, 6, -65535, 655360, 6)

[node name="Inside2" type="TileMap" parent="Control/background1"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 720896, 7, -65535, 720896, 7)

[node name="Inside5" type="TileMap" parent="Control/background1"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 786432, 6, -65535, 851968, 6)

[node name="Inside3" type="TileMap" parent="Control/background1"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_xxqia")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 786432, 7, -65535, 851968, 7)

[node name="Border" type="TileMap" parent="Control/background1"]
texture_filter = 1
position = Vector2(12.33, 14.07)
tile_set = SubResource("TileSet_1and6")
format = 2
layer_0/tile_data = PackedInt32Array(-65535, 720896, 6, -65536, 720896, 7, -1, 655360, 7)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 36.0
offset_bottom = 56.0
mouse_filter = 2
theme_override_constants/separation = -2

[node name="WheatContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/WheatContainer" index="0"]
texture = SubResource("AtlasTexture_xxqia")

[node name="BambooContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/BambooContainer" index="0"]
texture = SubResource("AtlasTexture_gv1iq")

[node name="FlowerContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/FlowerContainer" index="0"]
texture = SubResource("AtlasTexture_n0ylh")

[node name="PepperContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/PepperContainer" index="0"]
texture = SubResource("AtlasTexture_gbfpv")

[node name="CornContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/CornContainer" index="0"]
texture = SubResource("AtlasTexture_4x0me")

[node name="BerryContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/BerryContainer" index="0"]
texture = SubResource("AtlasTexture_1and6")

[node name="OnionContainer" parent="Control/VBoxContainer" instance=ExtResource("4_xxqia")]
visible = false
layout_mode = 2

[node name="Sprite" parent="Control/VBoxContainer/OnionContainer" index="0"]
texture = SubResource("AtlasTexture_w75gc")

[node name="time" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = 14.0
offset_right = 154.0
offset_bottom = 37.0

[node name="NightTimeFilter" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -475.0
offset_top = -294.0
offset_right = 510.0
offset_bottom = 298.0
mouse_filter = 2
color = Color(0.458824, 0, 0.501961, 0)

[node name="NightFilterAnimationPlayer" type="AnimationPlayer" parent="NightTimeFilter"]
libraries = {
&"": SubResource("AnimationLibrary_1and6")
}

[node name="ClockSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(98, -76)
texture = SubResource("AtlasTexture_ne771")

[node name="handSprite" type="Sprite2D" parent="ClockSprite"]
texture_filter = 1
texture = SubResource("AtlasTexture_2afx3")
offset = Vector2(0.5, -0.5)

[editable path="Control/VBoxContainer/WheatContainer"]
[editable path="Control/VBoxContainer/BambooContainer"]
[editable path="Control/VBoxContainer/FlowerContainer"]
[editable path="Control/VBoxContainer/PepperContainer"]
[editable path="Control/VBoxContainer/CornContainer"]
[editable path="Control/VBoxContainer/BerryContainer"]
[editable path="Control/VBoxContainer/OnionContainer"]
